adds ajax for auth

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </fieldset>
       </form>
 
-      <p id="display-error">asdf</p>
+      <p id="display-error"></p>
 
     </body>
 </html>
