Add html for testing item ajax
Temporary Html for testing ajax requests to /items

--- a/index.html
+++ b/index.html
@@ -55,5 +55,22 @@
 
       <p id="display-error"></p>
 
+      <button id="item-index" class="btn btn-lg">items index</button>
+
+      <button id="item-destroy" class="btn btn-lg">Item destroy</button>
+
+      <form id="item-create" class="form-signin">
+        <label>Create Item</label>
+        <input name="item[content]" type="text" class="form-control" required="" autofocus="">
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Create</button>
+      </form>
+
+      <form id="item-edit" class="form-signin">
+        <label>edit</label>
+        <input name="item[content]" type="text" class="form-control" required="" autofocus="">
+        <button class="btn btn-lg btn-primary btn-block" type="submit">edit</button>
+      </form>
+
+
     </body>
 </html>
