Adds code for delete item.
Working in the console.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
 
       <button id="item-index" class="btn btn-lg">items index</button>
 
+    <div data-id="8">
       <button id="item-destroy" class="btn btn-lg">Item destroy</button>
+    </div>
 
       <form id="item-create" class="form-signin">
         <label>Create Item</label>
