Adds code for edit item
working in the console

--- a/index.html
+++ b/index.html
@@ -67,11 +67,14 @@
         <button class="btn btn-lg btn-primary btn-block" type="submit">Create</button>
       </form>
 
+    <div data-id="1">
       <form id="item-edit" class="form-signin">
-        <label>edit</label>
+        <label>Edit Item</label>
         <input name="item[content]" type="text" class="form-control" required="" autofocus="">
-        <button class="btn btn-lg btn-primary btn-block" type="submit">edit</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Edit</button>
       </form>
+    </div>
+
 
 
     </body>
