Refactor sign in page as handlebars template

--- a/index.html
+++ b/index.html
@@ -14,32 +14,12 @@
 </head>
 
 <body class="container-fluid">
+  <div id="landing"></div>
 
-  <!-- landing page -->
-  <div class="landing-page">
 
-    <div class="form-group>"
-      <form id="form-signin">
-        <h2> Please sign in</h2>
 
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input name="credentials[email]" type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
 
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input name="credentials[password]" type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
-
-        <button class="btn btn-default btn-block" type="submit">Sign In</button>
-      </form>
-    </div>
-    <!-- /form group -->
-
-    <button id="no-account" class="btn btn-default">No account? Sign up here!</button>
-
-  </div>
-  <!-- /landing page -->
-
-  <!-- sign up page -->
-  <div class="signup-page start-hidden">
+  <!-- <div class="signup-page ">
 
     <div class="form-group"
       <form id="form-signup" >
@@ -58,12 +38,10 @@
    </div>
 
 
-
   </div>
-  <!-- /sign up page -->
 
-  <!-- to do list page -->
-  <div class="todo-page start-hidden">
+
+  <div class="todo-page ">
 
     <form id="change-password" class="form-signin">
       <h2 class="form-signin-heading">Change Password</h2>
@@ -99,8 +77,8 @@
       </form>
     </div>
 
-  </div>
-  <!-- /to do list page -->
+  </div> -->
+
 </body>
 
 </html>
