Adds UI Sign in and Sign up pages
Sign up and Sign in screen html moved into handlebars templates.

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 </head>
 
 <body class="container-fluid">
-  <div id="landing"></div>
+  <div id="current-page"></div>
 
 
 
 
-  <!-- <div class="signup-page ">
+  <!-- <div class="signup-page">
 
     <div class="form-group"
       <form id="form-signup" >
