Adds basic create item feature

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
     <!-- create item -->
-    <form id="item-create" class="form-signin dev-hide">
+    <form id="item-create" class="form-signin">
       <label>Create Item</label>
       <input name="item[content]" type="text" class="form-control" required="" autofocus="">
       <button class="btn btn-lg btn-primary btn-block" type="submit">Create</button>
