--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="todo-page ">
 
     <!-- change password form -->
-    <form id="change-password" class="form-signin dev-hide">
+    <form id="change-password">
       <h2 class="form-signin-heading">Change Password</h2>
       <label for="inputPassword" class="sr-only">Password</label>
       <input name="passwords[old]" type="password" id="inputPassword" class="form-control" placeholder="Old password" required="">
