Adds response messages for change pass and sign up

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
       <label for="inputPassword" class="sr-only">Password</label>
       <input name="passwords[new]" type="password" id="inputPassword" class="form-control" placeholder="New Password" required="">
       <button class="btn btn-lg btn-primary btn-block" type="submit">Change Password</button>
+      <p id="password-error"></p>
     </form>
 
     <!-- signout button -->
     <button id="signout" class="btn btn-lg btn-primary btn-block dev-hide">Sign Out</button>
 
     <!-- display error messages -->
-    <p id="display-error" class="dev-hide"></p>
 
     <button id="item-index" class="btn btn-lg">items index</button>
 
