--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
 </head>
 
 <body class="container-fluid">
+
+  <!-- side bars -->
+  <div class="row">
+    <div class="col-md-2 col-xs-2 column dark-grey"></div>
+    <div class="col-md-8 col-xs-8">
+      <header>
+      <h1>Todo List</h1>
+      </header>
+      <div id="current-page"></div>
+
+    </div>
+    <div class="col-md-2 col-xs-2 column dark-grey"></div>
+  </div>
   <div id="current-page"></div>
 </body>
 
